Fixed menu button focus ring overflow (#210)

--- a/src/index.css
+++ b/src/index.css
@@ -231,6 +231,8 @@ a:hover {
 
 #react-burger-menu-btn {
   width: inherit !important;
+  height: inherit !important;
+  top: inherit !important;
   left: unset !important;
 }
 
